# fondamenti-di-grafica

./: .gitignore
FirstRayTracing/: CMakeLists.txt  constants.h  main.cpp
FirstRayTracing/flyngBox/: flyngBox.cpp  flyngBox.h
FirstRayTracing/gradient/: gradient.cpp  gradient.h
FirstRayTracing/model/: Object.h  Sphere.cpp  Sphere.h  box.cpp  box.h  camera.cpp  camera.h  disk.cpp  disk.h  object_list.cpp  object_list.h  parallelCamera.cpp  parallelCamera.h  plane.cpp  plane.h  quadrilateral.cpp  quadrilateral.h  rayTracingAnimation.cpp  rayTracingAnimation.h  triangle.cpp  triangle.h
FirstRayTracing/rayTracing/: rayTracing.cpp  rayTracing.h
FirstRayTracing/utilitySDL/: point3d.h  ray.h  utilitySDL.cpp  utilitySDL.h  utilitySDLInline.h  vec3.h
FirstRayTracingShadow/FirstRayTracingWindows/: FirstRayTracingWindows.vcxproj  FirstRayTracingWindows.vcxproj.filters  Object.h  Sphere.cpp  Sphere.h  aabb.h  box.cpp  box.h  camera.cpp  color.h  cylinder.cpp  cylinder.h  (+34 more)
FirstRayTracingWindows/: img
Seconda Esercitazione/: Object.h  Seconda Esercitazione.sln  Seconda Esercitazione.vcxproj  Seconda Esercitazione.vcxproj.filters  Sphere.cpp  Sphere.h  aabb.h  blurSphere.cpp  blurSphere.h  camera.h  cylinder.cpp  direction_light.h  instance.cpp  instance.h  main.cpp  material.h  mesh.h  packages.config  point2D.h  point3d.h  quadrilateral.cpp  quadrilateral.h  record.h  scene.cpp  scene.h  secondaEsercitazione.cpp  secondaEsercitazione.h  shader.h  spot_light.h  texture.cpp  texture.h  utilityRayTracing.cpp  utilityRayTracing.h  utilitySDL.cpp  utilitySDLInline.h  vec3.h
(+70 files in other folders)
